--- a/public/stylesheets/facebooklist.css
+++ b/public/stylesheets/facebooklist.css
@@ -21,7 +21,7 @@ ul.holder li.bit-box-focus a.closebutton, ul.holder li.bit-box-focus a.closebutt
 
 /* Autocompleter */
 
-#facebook-auto { display: none; position: absolute; width: 512px; background: #eee; z-index: 9999; }
+#facebook-auto { display: none; position: absolute; width: 500px; background: #eee; z-index: 9999; }
 #facebook-auto .default { padding: 5px 7px; border: 1px solid #ccc; border-width: 0 1px 1px; }
 #facebook-auto ul { display: none; margin: 0; padding: 0; overflow: auto; }
 #facebook-auto ul li { padding: 5px 12px; z-index: 1000; cursor: pointer; margin: 0; list-style-type: none; border: 1px solid #ccc; border-width: 0 1px 1px; font: 11px "Lucida Grande", "Verdana"; }
@@ -33,4 +33,9 @@ ul.holder li.bit-box-focus a.closebutton, ul.holder li.bit-box-focus a.closebutt
 #add a { color: #666; }
 #add-test { width: 100px; padding: 2px; }
 #button_container { margin-left: 70px; margin-bottom: 30px;}
+
+/* Fixes for FFCRM */
+#facebook-list { margin: 0; background-color: white; margin-bottom: 18px; }
+#facebook-list li { border-bottom: 0; clear: none; }
+ul.holder li { padding: 0; }
 
