Tried to fix some IE7 css issues

--- a/app/views/common/_tags.html.haml
+++ b/app/views/common/_tags.html.haml
@@ -5,20 +5,21 @@
 %tr
   %td{ :valign => :top, :colspan => span }
     .label.req Tags: <small>(comma separated, letters and digits only)</small>
-    %dd#facebook-list
-      = f.text_field :tag_list, :id => "tag_list", :style => "width:500px", :autocomplete => "off"
-      #facebook-auto
-        .default Type the name of a tag you'd like to use.  Use commas to separate multiple tags.
-        %ul.feed
-          - # Get tags from either the unsaved params, or from the object.
-          - tags = (params[asset] && params[asset][:tag_list]) ? params[asset][:tag_list].split(",") : f.object.tags.map{|t| t.name }
-          - tags.each do |tag|
-            %li{ :value => tag }= tag
-        :javascript
-          fbtaglist = new FacebookList('tag_list', 'facebook-auto',
-                                      { newValues: true,
-                                        regexSearch: false,
-                                        separator: Event.KEY_COMMA });
-          var tagjson = #{ActsAsTaggableOn::Tag.all.map{|t| {"caption" => t.name, "value" => t.name} }.to_json}
-          tagjson.each(function(t){fbtaglist.autoFeed(t)});
+    .facebook-tags
+      %dd#facebook-list
+        = f.text_field :tag_list, :id => "tag_list", :style => "width:500px", :autocomplete => "off"
+        #facebook-auto
+          .default Type the name of a tag you'd like to use.  Use commas to separate multiple tags.
+          %ul.feed
+            - # Get tags from either the unsaved params, or from the object.
+            - tags = (params[asset] && params[asset][:tag_list]) ? params[asset][:tag_list].split(",") : f.object.tags.map{|t| t.name }
+            - tags.each do |tag|
+              %li{ :value => tag }= tag
+          :javascript
+            fbtaglist = new FacebookList('tag_list', 'facebook-auto',
+                                        { newValues: true,
+                                          regexSearch: false,
+                                          separator: Event.KEY_COMMA });
+            var tagjson = #{ActsAsTaggableOn::Tag.all.map{|t| {"caption" => t.name, "value" => t.name} }.to_json}
+            tagjson.each(function(t){fbtaglist.autoFeed(t)});
 
