--- a/app/views/common/_tags.html.haml
+++ b/app/views/common/_tags.html.haml
@@ -1,18 +1,19 @@
 - asset = params[:controller].singularize
-- # Build asset tags manually in case the asset validation failed.
-- if params[asset] && params[asset][:tag_list]
+- is_unsaved_object = params[asset] && params[asset][:tag_list]
+- # Build asset tags manually if the asset validation failed.
+- if is_unsaved_object
   - f.object.tags = params[asset][:tag_list].split(",").map {|x| ActsAsTaggableOn::Tag.find_by_name(x.strip)}.compact.uniq
 %tr
   %td{ :valign => :top, :colspan => span }
     .label.req Tags: <small>(comma separated, letters and digits only)</small>
-    .facebook-tags
-      %dd#facebook-list
+    #taggings
+      #facebook-list
         = f.text_field :tag_list, :id => "tag_list", :style => "width:500px", :autocomplete => "off"
         #facebook-auto
           .default Type the name of a tag you'd like to use.  Use commas to separate multiple tags.
           %ul.feed
             - # Get tags from either the unsaved params, or from the object.
-            - tags = (params[asset] && params[asset][:tag_list]) ? params[asset][:tag_list].split(",") : f.object.tags.map{|t| t.name }
+            - tags = is_unsaved_object ? params[asset][:tag_list].split(",") : f.object.tags.map{|t| t.name }
             - tags.each do |tag|
               %li{ :value => tag }= tag
           :javascript
