--- a/public/stylesheets/facebooklist.css
+++ b/public/stylesheets/facebooklist.css
@@ -10,18 +10,16 @@ ul.holder li.bit-input input.smallinput { width: 20px; }
 ul.hoder li.bit-input input.maininput { margin: 0; }
 
 /* Facebook demo CSS */
-#facebook-list ul.holder li.bit-box, #apple-list ul.holder li.bit-box { padding-right: 15px; position: relative; }
-#apple-list ul.holder li.bit-input { margin: 0; }
-#apple-list ul.holder li.bit-input input.smallinput { width: 5px; }
+#facebook-list ul.holder li.bit-box { padding-right: 15px; position: relative; }
 ul.holder li.bit-hover { background: #BBCEF1; border: 1px solid #6D95E0; }
 ul.holder li.bit-box-focus { border-color: #598BEC; background: #598BEC; color: #fff; }
-ul.holder li.bit-box a.closebutton { position: absolute; right: 4px; top: 5px; display: block; width: 7px; height: 7px; font-size: 1px; background: url('/plugin_assets/crm_tags/images/facebook-close.gif'); }
+ul.holder li.bit-box a.closebutton { width: 7px; height: 7px; background: url('/plugin_assets/crm_tags/images/facebook-close.gif'); }
 ul.holder li.bit-box a.closebutton:hover { background-position: 7px; }
 ul.holder li.bit-box-focus a.closebutton, ul.holder li.bit-box-focus a.closebutton:hover { background-position: bottom; }
 
 /* Autocompleter */
 
-#facebook-auto { display: none; position: absolute; width: 500px; background: #eee; z-index: 9999; }
+#facebook-auto { display: none; width: 500px; background: #eee; z-index: 9999; }
 #facebook-auto .default { padding: 5px 7px; border: 1px solid #ccc; border-width: 0 1px 1px; }
 #facebook-auto ul { display: none; margin: 0; padding: 0; overflow: auto; }
 #facebook-auto ul li { padding: 5px 12px; z-index: 1000; cursor: pointer; margin: 0; list-style-type: none; border: 1px solid #ccc; border-width: 0 1px 1px; font: 11px "Lucida Grande", "Verdana"; }
@@ -38,6 +36,12 @@ ul.holder li.bit-box-focus a.closebutton, ul.holder li.bit-box-focus a.closebutt
 #facebook-list { margin: 0 0 18px; background-color: white; }
 #facebook-list li { border-bottom: 0; clear: none; }
 ul.holder li { padding: 0; }
-
 .facebook-tags { padding: 0; margin: 0; }
+
+
+/* Fixes for 'Peek-a-boo' bug in IE7 and below */
+#facebook-list ul.holder li.bit-box { padding-right: 5px; position: static; }
+ul.holder li.bit-box a.closebutton { display: inline-block; margin-left: 3px;}
+*:first-child+html ul.holder li.bit-box a.closebutton { margin-bottom: 2px; }
+* html ul.holder li.bit-box a.closebutton { margin-bottom: 2px; }
 
